@@ -28,6 +28,15 @@ Revision 4.2.5rc1
   can't easily stop doing that.
 - The snmpCommunityTable row selection improved to follow RFC2576, clause
   5.2.1.
+- AsynCommandGenerator.uncfgCmdGen() & AsynNotificationOriginator.uncfgCmdGen()
+  methods now accept optional authData parameter to remove specific entries
+  from LCD. This can be useful for modifying security parameters for
+  specific securityName.
+- AsynNotificationOriginator.cfgCmdGen() does not take into account
+  securityModel & securityLevel when reducing LCD access via addTrapUser().
+  This improves LCD consistency on sparse add/del operatons but also
+  does not let you to configure different securityModels per securityname
+  at VACM though the cfgCmdGen() wrapper.
 - Fix and significant logic rework of snmpCommunityTable to make it working
   in both Generator and Responder modes and better follow RFC2576 
   requirements on sequential entries lookup and selection. As a side effect,
